force-app/main/default/objects/Skywave_Seat_Map__c/Skywave_Seat_Map__c.object-meta.xml
<CustomObject>
    <description>Seat layout for an aircraft type (Product2). One Skywave_Seat_Map__c per Product2 row. Layout_Json__c describes class zones, rows, and seats; the Chapter-8 seat-picker LWC renders directly off this JSON.</description>
    <label>Skywave Seat Map</label>
    <pluralLabel>Skywave Seat Maps</pluralLabel>
    <nameField>
        <label>Seat Map Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>