force-app/main/default/objects/Skywave_Seat_Map__c/fields/Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Type__c</fullName>
    <label>Aircraft Type</label>
    <description>Master-detail to the Product2 (aircraft type) this seat map describes.</description>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Skywave_Seat_Maps</relationshipName>
    <relationshipLabel>Skywave Seat Maps</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>