force-app/main/default/objects/Skywave_Seat_Map__c/fields/Layout_Json__c.field-meta.xml
<CustomField>
    <fullName>Layout_Json__c</fullName>
    <label>Layout JSON</label>
    <description>JSON describing the cabin: class zones (first/business/economy), rows in each zone, seat letters, aisle positions. The seat-picker LWC renders the cabin from this. Schema example: {"layout":"3-3-3","classes":[{"name":"First","rows":[1,2],"abreast":"2-2-2"},{"name":"Business","rows":[3,4,5,6,7,8,9,10],"abreast":"2-2-2"},{"name":"Economy","rows":[11,40],"abreast":"3-3-3"}]}</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>