force-app/main/default/objects/Skywave_Seat_Map__c/fields/Total_Rows__c.field-meta.xml
<CustomField>
    <fullName>Total_Rows__c</fullName>
    <label>Total Rows</label>
    <description>Number of seat rows on the aircraft. Quick aggregate that the seat-picker LWC can read without parsing the JSON.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>